--- a/style.css
+++ b/style.css
@@ -6,8 +6,140 @@ Auther: Nanna Jessen
 */ 
 
 .navbar-brand{
-    display: flexbox;
+    display: flex;
     align-content: center;
   justify-content: center;
   margin-left: 2rem;
 }
+
+
+
+  
+    
+
+.bg-image-full {
+    height: 70vh;
+    width: 98%;
+    background-position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+   
+    border-radius: 1rem;
+    box-shadow:  1px 1px 1px  rgba(148, 148, 148, 0.4);
+   
+    position: center;
+   
+   
+  }
+
+  .bottom-text {
+    position: absolute;
+    bottom: 100px;
+    width:80%;
+    margin:0 auto;
+  }
+
+  .text-center{
+    color: f6f6f6;
+    display: flex;
+    flex-direction: column;
+    align-content: end;
+   
+    font-size: 2rem;
+    opacity: 0.8;
+ /*    margin-top: 10rem;
+    margin-bottom: 10rem; */
+  }
+
+  .text-white-50 {
+    color: f6f6f6;
+    font-size: medium;
+  }
+
+  .w-100 {
+    height: 80 %;
+    width: 80%;
+    border-radius: 1rem;
+    box-shadow:  1px 1px 1px  rgba(148, 148, 148, 0.4);
+    margin: 1rem;
+  }
+
+  .span-or {
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: -2px;
+    margin-left: -25px;
+    background-color: #fff;
+    width: 50px;
+    text-align: center;
+  }
+  .hr-or {
+    background-color: #cdcdcd;
+    height: 1px;
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+  }
+/* footer.nb-footer {
+background: #222;
+border-top: 4px solid #676763; }
+footer.nb-footer .about {
+margin: 0 auto;
+margin-top: 40px;
+max-width: 1170px;
+text-align: center; }
+footer.nb-footer .about p {
+font-size: 13px;
+color: #999;
+margin-top: 30px; }
+footer.nb-footer .about .social-media {
+margin-top: 15px; }
+footer.nb-footer .about .social-media ul li a {
+display: inline-block;
+width: 45px;
+height: 45px;
+line-height: 45px;
+border-radius: 50%;
+font-size: 16px;
+color: #857866;
+border: 1px solid rgba(255, 255, 255, 0.3); }
+footer.nb-footer .about .social-media ul li a:hover {
+background: #857866;
+color: #fff;
+border-color: #857866; }
+footer.nb-footer .footer-info-single {
+margin-top: 30px; }
+footer.nb-footer .footer-info-single .title {
+color: #aaa;
+text-transform: uppercase;
+font-size: 16px;
+border-left: 4px solid #857866;
+padding-left: 5px; }78c33
+footer.nb-footer .footer-info-single ul p {
+display: block;
+color: #aaa;
+padding: 2px 0; }
+footer.nb-footer .footer-info-single ul li a:hover {
+color: #857866; }
+footer.nb-footer .footer-info-single p {
+font-size: 13px;
+line-height: 20px;
+color: #aaa; }
+footer.nb-footer .copyright {
+margin-top: 15px;
+background: #111;
+padding: 7px 0;
+color: #999; }
+footer.nb-footer .copyright p {
+margin: 0;
+padding: 0; }
+
+.p.what-just{
+  font-size: 3px;
+}
+
+.col-md-3{
+ display: flex;
+} */
