--- a/style.css
+++ b/style.css
@@ -5,18 +5,6 @@ Auther: Nanna Jessen
 
 */ 
 
-.navbar-brand{
-    display: flex;
-    align-content: center;
-  justify-content: center;
-  margin-left: 2rem;
-}
-
-
-
-  
-    
-
 .bg-image-full {
     height: 70vh;
     width: 98%;
@@ -49,8 +37,7 @@ Auther: Nanna Jessen
    
     font-size: 2rem;
     opacity: 0.8;
- /*    margin-top: 10rem;
-    margin-bottom: 10rem; */
+
   }
 
   .text-white-50 {
@@ -58,13 +45,13 @@ Auther: Nanna Jessen
     font-size: medium;
   }
 
-  .w-100 {
+  /* .w-100 {
     height: 80 %;
     width: 80%;
     border-radius: 1rem;
     box-shadow:  1px 1px 1px  rgba(148, 148, 148, 0.4);
     margin: 1rem;
-  }
+  } */
 
   .span-or {
     display: block;
@@ -82,64 +69,127 @@ Auther: Nanna Jessen
     margin-top: 0px !important;
     margin-bottom: 0px !important;
   }
-/* footer.nb-footer {
-background: #222;
-border-top: 4px solid #676763; }
-footer.nb-footer .about {
-margin: 0 auto;
-margin-top: 40px;
-max-width: 1170px;
-text-align: center; }
-footer.nb-footer .about p {
-font-size: 13px;
-color: #999;
-margin-top: 30px; }
-footer.nb-footer .about .social-media {
-margin-top: 15px; }
-footer.nb-footer .about .social-media ul li a {
-display: inline-block;
-width: 45px;
-height: 45px;
-line-height: 45px;
-border-radius: 50%;
-font-size: 16px;
-color: #857866;
-border: 1px solid rgba(255, 255, 255, 0.3); }
-footer.nb-footer .about .social-media ul li a:hover {
-background: #857866;
-color: #fff;
-border-color: #857866; }
-footer.nb-footer .footer-info-single {
-margin-top: 30px; }
-footer.nb-footer .footer-info-single .title {
-color: #aaa;
-text-transform: uppercase;
-font-size: 16px;
-border-left: 4px solid #857866;
-padding-left: 5px; }78c33
-footer.nb-footer .footer-info-single ul p {
-display: block;
-color: #aaa;
-padding: 2px 0; }
-footer.nb-footer .footer-info-single ul li a:hover {
-color: #857866; }
-footer.nb-footer .footer-info-single p {
-font-size: 13px;
-line-height: 20px;
-color: #aaa; }
-footer.nb-footer .copyright {
-margin-top: 15px;
-background: #111;
-padding: 7px 0;
-color: #999; }
-footer.nb-footer .copyright p {
-margin: 0;
-padding: 0; }
 
-.p.what-just{
-  font-size: 3px;
+  .bg-light.py-5.py-xl-6{
+    justify-items: center;
+    width: 97%;
+    border-radius: 2rem;
+  }
+
+
+/*  */
+
+.g-6,
+.gx-6 {
+  --bs-gutter-x: 4.5rem;
+}
+.g-6,
+.gy-6 {
+  --bs-gutter-y: 4.5rem;
 }
 
-.col-md-3{
- display: flex;
-} */
+
+
+
+@media (min-width: 576px) {
+  .g-sm-6,
+  .gx-sm-6 {
+    --bs-gutter-x: 4.5rem;
+  }
+  .g-sm-6,
+  .gy-sm-6 {
+    --bs-gutter-y: 4.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .g-md-6,
+  .gx-md-6 {
+    --bs-gutter-x: 4.5rem;
+  }
+  .g-md-6,
+  .gy-md-6 {
+    --bs-gutter-y: 4.5rem;
+  }
+}
+@media (min-width: 992px) {
+  .g-lg-6,
+  .gx-lg-6 {
+    --bs-gutter-x: 4.5rem;
+  }
+  .g-lg-6,
+  .gy-lg-6 {
+    --bs-gutter-y: 4.5rem;
+  }
+}
+@media (min-width: 1200px) {
+  .g-xl-6,
+  .gx-xl-6 {
+    --bs-gutter-x: 4.5rem;
+  }
+  .g-xl-6,
+  .gy-xl-6 {
+    --bs-gutter-y: 4.5rem;
+  }
+}
+@media (min-width: 1400px) {
+  .g-xxl-6,
+  .gx-xxl-6 {
+    --bs-gutter-x: 4.5rem;
+  }
+  .g-xxl-6,
+  .gy-xxl-6 {
+    --bs-gutter-y: 4.5rem;
+  }
+}
+.mb-6 {
+  margin-bottom: 4.5rem !important;
+}
+.py-6 {
+  padding-top: 4.5rem !important;
+  padding-bottom: 4.5rem !important;
+}
+@media (min-width: 576px) {
+  .mb-sm-6 {
+    margin-bottom: 4.5rem !important;
+  }
+  .py-sm-6 {
+    padding-top: 4.5rem !important;
+    padding-bottom: 4.5rem !important;
+  }
+}
+@media (min-width: 768px) {
+  .mb-md-6 {
+    margin-bottom: 4.5rem !important;
+  }
+  .py-md-6 {
+    padding-top: 4.5rem !important;
+    padding-bottom: 4.5rem !important;
+  }
+}
+@media (min-width: 992px) {
+  .mb-lg-6 {
+    margin-bottom: 4.5rem !important;
+  }
+  .py-lg-6 {
+    padding-top: 4.5rem !important;
+    padding-bottom: 4.5rem !important;
+  }
+}
+@media (min-width: 1200px) {
+  .mb-xl-6 {
+    margin-bottom: 4.5rem !important;
+  }
+  .py-xl-6 {
+    padding-top: 4.5rem !important;
+    padding-bottom: 4.5rem !important;
+  }
+}
+@media (min-width: 1400px) {
+  .mb-xxl-6 {
+    margin-bottom: 4.5rem !important;
+  }
+  .py-xxl-6 {
+    padding-top: 4.5rem !important;
+    padding-bottom: 4.5rem !important;
+  }
+}
